crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@while.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/while.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "" ]
    2 [ label = "" ]
    3 [ label = "" ]
    4 [ label = "" ]
    5 [ label = "return <value>" ]
    6 [ label = "Unreachable" ]
    7 [ label = "return <value>" ]
    8 [ label = "Unreachable" ]
    9 [ label = "" ]
    0 -> 1 [ label = NewFunction ]
    2 -> 3 [ label = Normal ]
    2 -> 4 [ label = Normal ]
    3 -> 4 [ label = Normal ]
    5 -> 6 [ label = Unreachable , style = "dotted" ]
    1 -> 2 [ label = Normal ]
    2 -> 5 [ label = Normal ]
    5 -> 7 [ label = Normal ]
    5 -> 2 [ label = Backedge ]
    2 -> 7 [ label = Normal ]
    7 -> 8 [ label = Unreachable , style = "dotted" ]
    0 -> 9 [ label = Normal ]
}
