crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@yield_as_statement_and_expression.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/yield_as_statement_and_expression.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "" ]
    2 [ label = "" ]
    0 -> 1 [ label = NewFunction ]
    0 -> 2 [ label = Normal ]
}
